[package]
name = "rpi_matrix_rust"
version = "0.1.0"
authors = ["jturzinski <janos.turzinski@adesso.de>","eturzinski <Erik.Turzinski@adesso.de>"]
edition = "2018"


[dependencies]
    rpi-led-matrix = { git = "https://github.com/sphinxc0re/rust-rpi-rgb-led-matrix" }
    serde = "1.0.89"
    serde_json = "1.0"
    serde_derive = "1.0.89"

    rand = "0.6.5"
    rocket = "0.4.0"
